--- a/Task4-parametrizedTransformer/PhotoEnhancer/PhotoEnhancer/PhotoEnhancer.csproj
+++ b/Task4-parametrizedTransformer/PhotoEnhancer/PhotoEnhancer/PhotoEnhancer.csproj
@@ -49,11 +49,14 @@
     <Compile Include="Data\Convertors.cs" />
     <Compile Include="Data\Photo.cs" />
     <Compile Include="Data\Pixel.cs" />
+    <Compile Include="Filters\ContrastParameters.cs" />
     <Compile Include="Filters\EmptyParameters.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Filters\IParameters.cs" />
     <Compile Include="Filters\Transform\ITransformer.cs" />
+    <Compile Include="Filters\Transform\LeanTransformer.cs" />
     <Compile Include="Filters\Transform\RotateTransformer.cs" />
+    <Compile Include="Filters\Transform\LeanParameters.cs" />
     <Compile Include="Filters\Transform\RotationParameters.cs" />
     <Compile Include="Filters\LighteningParameters.cs" />
     <Compile Include="Filters\ParameterInfo.cs" />
